Rearange jmp_buf content again: storing the sigsetjmp() save_mask midway inside the environment is not a good idea, we may overwrite it when fetching other details of the sigjmp environment. Instead move it to the very end again. Do not bother to save volatile (caller saved) global registers. Fixes PR port-sparc64/44918.